[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/TTT_Bacground.png" type="Texture" id=1]
[ext_resource path="res://Detector/Detector.tscn" type="PackedScene" id=2]
[ext_resource path="res://TicTacToe.gd" type="Script" id=3]

[node name="TicTacToe" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 300, 200 )
texture = ExtResource( 1 )

[node name="#" type="Node" parent="."]

[node name="LeftUp" parent="#" instance=ExtResource( 2 )]
position = Vector2( 104.118, 92.7714 )

[node name="Up" parent="#" instance=ExtResource( 2 )]
position = Vector2( 285.656, 91.4365 )

[node name="RightUp" parent="#" instance=ExtResource( 2 )]
position = Vector2( 472.533, 90.7691 )

[node name="Middle" parent="#" instance=ExtResource( 2 )]
position = Vector2( 287.658, 210.237 )

[node name="Left" parent="#" instance=ExtResource( 2 )]
position = Vector2( 99.4455, 210.905 )

[node name="Right" parent="#" instance=ExtResource( 2 )]
position = Vector2( 478.54, 212.24 )

[node name="LeftDown" parent="#" instance=ExtResource( 2 )]
position = Vector2( 97.4432, 333.71 )

[node name="Down" parent="#" instance=ExtResource( 2 )]
position = Vector2( 285.656, 333.71 )

[node name="RightDown" parent="#" instance=ExtResource( 2 )]
position = Vector2( 479.207, 334.377 )

[node name="Score" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "dasdad"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="clicked" from="#/LeftUp" to="." method="_on_LeftUp_clicked"]
[connection signal="clicked" from="#/Up" to="." method="_on_Up_clicked"]
[connection signal="clicked" from="#/RightUp" to="." method="_on_RightUp_clicked"]
[connection signal="clicked" from="#/Middle" to="." method="_on_Middle_clicked"]
[connection signal="clicked" from="#/Left" to="." method="_on_Left_clicked"]
[connection signal="clicked" from="#/Right" to="." method="_on_Right_clicked"]
[connection signal="clicked" from="#/LeftDown" to="." method="_on_LeftDown_clicked"]
[connection signal="clicked" from="#/Down" to="." method="_on_Down_clicked"]
[connection signal="clicked" from="#/RightDown" to="." method="_on_RightDown_clicked"]
